--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,4 +1,5 @@
-$bg-primary: #1e1e1e;
+$bg-primary: #171717;
+$bg-secondary: #2a2a2a;
 $primary: #148a22;
 $primary1: #632a48;
 // Celeste (blue accent) for products section
@@ -14,7 +15,6 @@ $danger: #f44336;
 $green: #008035;
 $greenLight: #3a9962; // light green accent
 $yellowLight: #ffd54f; // light yellow accent
-$primary-transparent: rgba($bg-primary, 0.9);
 $height-app-bar: 64px;
 $mobile-resolution: 800px;
 $height-bottom-bar: 74px;
