--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -42,6 +42,9 @@ $margins-from-screen: 5px;
 .primary {
     color: $primary !important;
 }
+.primary-light {
+    color: rgba($primary, 0.5) !important;
+}
 .gray {
     color: $gray !important;
 }
