--- a/src/styles/_my-styles.scss
+++ b/src/styles/_my-styles.scss
@@ -363,3 +363,10 @@ hr {
     opacity: 1 !important;
     border-top: 1px dashed rgba($primary, 0.3) !important;
 }
+
+.close-btn {
+    border-radius: 50%;
+    padding: 15px !important;
+    box-shadow: 0 0 8px rgba(0, 0, 0, 0.5);
+    color: rgba(#ffffff, 0.7) !important;
+}
