--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,6 +1,6 @@
 $bg-primary: #171717;
 $bg-secondary: #2a2a2a;
-$primary: #00ffff; // neon celeste
+$primary: #33c7ff; // neon celeste
 $primary1: #632a48;
 // Celeste (blue accent) for products section
 $blue: #33c7ff;
