feat(ui): add list styles for MyRichText and reset form on ItemDialog mount
- Added CSS styles for unordered and ordered lists in _my-styles.scss to support MyRichText component
- Added resetForm() call in ItemDialog onMounted hook to ensure form is cleared on dialog open

--- a/src/styles/_my-styles.scss
+++ b/src/styles/_my-styles.scss
@@ -370,3 +370,34 @@ hr {
     box-shadow: 0 0 8px rgba(0, 0, 0, 0.5);
     color: rgba(#ffffff, 0.7) !important;
 }
+
+// MyRichText list styles
+ul {
+    margin-left: 1em !important;
+    padding-left: 0 !important;
+}
+
+ol {
+    margin-left: 1em !important;
+    padding-left: 0 !important;
+}
+
+li {
+    margin-left: 1em !important;
+}
+
+ul ul {
+    margin-left: 2em !important;
+}
+
+ol ol {
+    margin-left: 2em !important;
+}
+
+ul ol {
+    margin-left: 2em !important;
+}
+
+ol ul {
+    margin-left: 2em !important;
+}
