--- a/src/styles/dashboard-columns.scss
+++ b/src/styles/dashboard-columns.scss
@@ -33,9 +33,14 @@
 }
 
 .cols-title {
-    flex: 0 0 300px;
-    max-width: 300px;
+    flex: 1;
+    min-width: 500px;
+    max-width: 500px;
     text-align: left;
+    @media (max-width: $mobile-resolution) {
+        flex: 0 0 300px;
+        max-width: 300px;
+    }
 }
 
 $col-assigned-width: 90px;
