--- a/src/styles/dashboard-columns.scss
+++ b/src/styles/dashboard-columns.scss
@@ -37,8 +37,8 @@
 
 .cols-title {
     flex: 1;
-    min-width: 500px;
-    max-width: 500px;
+    min-width: 600px;
+    max-width: 600px;
     text-align: left;
     @media (max-width: $mobile-resolution) {
         flex: 0 0 300px;
@@ -69,4 +69,11 @@ $col-state-width: 120px;
     flex: 0 0 80px;
     max-width: 80px;
     text-align: center;
+}
+.state-circle {
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    flex-shrink: 0;
+    margin-right: 6px;
 }
