--- a/src/styles/dashboard-columns.scss
+++ b/src/styles/dashboard-columns.scss
@@ -30,9 +30,12 @@
 }
 
 .cols-order {
-    flex: 0 0 45px;
-    max-width: 45px;
+    flex: 0 0 25px;
+    max-width: 25px;
     text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .cols-title {
