style(ui): add anchor tag styles and update service worker cache revision

--- a/src/styles/_my-styles.scss
+++ b/src/styles/_my-styles.scss
@@ -401,3 +401,7 @@ ul ol {
 ol ul {
     margin-left: 2em !important;
 }
+a {
+    color: rgba($primary, 0.5) !important;
+    text-decoration: underline !important;
+}
