--- a/src/styles/dashboard-columns.scss
+++ b/src/styles/dashboard-columns.scss
@@ -64,13 +64,19 @@ $col-state-width: 120px;
 }
 
 .cols-effort {
-    flex: 0 0 100px;
-    max-width: 100px;
+    flex: 0 0 70px;
+    max-width: 70px;
 }
 
 .cols-priority {
     flex: 0 0 80px;
     max-width: 80px;
+    text-align: center;
+}
+
+.cols-project {
+    flex: 0 0 160px;
+    max-width: 160px;
     text-align: center;
 }
 .state-circle {
